--- a/index.html
+++ b/index.html
@@ -1181,7 +1181,7 @@ OK (1 test, 1 assertion)</pre>
 
 <script>
 var _gaq = _gaq || [];
-_gaq.push(['_setAccount', 'UA-XXXXXXXX-1']);
+_gaq.push(['_setAccount', 'UA-55718943-1']);
 _gaq.push(['_trackPageview']);
 
 (function() {
